finished favorites page

--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,5 +1,5 @@
 <div id="category-show-page-banner"class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-  <h2>Your Sparks</h2>
+  <h2>My Sparks</h2>
 </div>
   <div id="favorite-page-tabs">
     <ul class="list-inline tabs-underlined">
