--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,30 @@
 <div id="category-show-page-banner"class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
   <%= @category.title %>
 </div>
-
+<div
+  class="container d-flex justify-content-between"
+  style="padding-left: 10px; padding-right: 10px; margin-top: 15px;"
+>
+  <div><button
+      type="button"
+      class="btn btn-outline-secondary"
+      id="amsterdam-btn"
+      style="border-radius: 20px; width: 110px;"
+    >Amsterdam</button></div>
+  <div><button
+      type="button"
+      class="btn btn-outline-secondary"
+      id="rotterdam-btn"
+      style="border-radius: 20px; width: 110px;"
+    >Rotterdam</button></div>
+  <div><button
+      type="button"
+      class="btn btn-outline-secondary"
+      id="the-hague-btn"
+      style="border-radius: 20px; width: 110px;"
+    >The Hague</button></div>
+</div>
+<hr>
 <div id="category-page-main">
   <div class="container" style="margin-top: 20px">
     <% @suggestions.each do |suggestion| %>
@@ -34,3 +57,16 @@
     <% end %>
   </div>
 </div>
+<script>
+  document.addEventListener("DOMContentLoaded", function(event) {
+    document.getElementById("amsterdam-btn").click();
+ });
+
+  const amsterdamButton = document.getElementById('amsterdam-btn')
+  amsterdamButton.addEventListener('Click', (event) => {
+    console.log('hello')
+  })
+
+  const rotterdamButton = document.querySelector('#rotterdam-btn')
+  const theHagueButton = document.querySelector('#the-hague-btn')
+</script>
