--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,19 +1,6 @@
 <div id="category-show-page-banner"class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-  <h2>My Sparks</h2>
+    <h2>Favorites</h2>
 </div>
-  <div id="favorite-page-tabs">
-    <ul class="list-inline tabs-underlined">
-      <li>
-        <a href="#" class="tab-underlined active">Favorites</a>
-      </li>
-      <li>
-        <a href="#" class="tab-underlined">Upcoming Sparks</a>
-      </li>
-      <li>
-        <a href="#" class="tab-underlined">Past Sparks</a>
-      </li>
-    </ul>
-  </div>
 <div id="category-page-main">
   <div class="container" style="margin-top: 20px">
     <% current_user.suggestions.each do |suggestion| %>
