--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -18,3 +18,11 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
+
+.avatar-extra-large {
+  justify-items: center;
+  width: 165px;
+  height: fit-content;
+  padding-bottom: 2px;
+  margin-left: 70px;
+}
