--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,14 +4,14 @@
   </div>
   <div class="d-flex flex-column align-items-center text-center">
     <%# <img class="avatar-extra-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" /> %>
-    <%= cl_image_tag current_user.photo.key %>
+    <%# <%= cl_image_tag @article.photo.key, height: 300, width: 400, crop: :fill %>
       <span class="font-weight-bold"><%= current_user.first_name %>, <%= current_user.last_name %></span>
     <span class="text-black-50"><%= current_user.email %></span>
   </div>
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= f.error_notification %>
     <div class="form-inputs">
-     <%= f.input :photo, as: :file %>
+      <%# <%= f.input :photo, as: :file %>
       <%= f.input :first_name, required: true, autofocus: true %>
       <%= f.input :last_name, required: true, autofocus: true %>
       <%= f.input :email, required: true, autofocus: true %>
