--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -21,8 +21,8 @@
     <% colors = %w[
       darkred
       darkblue
+      purple
       green
-      brown
       orange
       turquoise
       hotpink
