--- a/app/assets/stylesheets/pages/_category_show.scss
+++ b/app/assets/stylesheets/pages/_category_show.scss
@@ -7,14 +7,22 @@
   box-sizing: border-box;
 }
 
+#category-show-title-words {
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  padding-top: 70px;
+
+}
+
 #category-show-page-banner {
+  background: rgb(160,56,81);
+background: linear-gradient(0deg, rgba(160,56,81,1) 0%, rgba(177,122,135,1) 26%, rgba(231,193,202,1) 100%);
     background-size: cover;
-    background-position: center;
-    height: 180px;
+    height: 145px;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: rgb(255, 255, 255);
     font-family: 'Montserrat', sans-serif;
     font-size: 35px;
     font-weight: bolder;
