--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,72 +1,74 @@
-<div id="category-show-page-banner"class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-  <%= @category.title %>
+<div id="category-show-page-banner" class="card-category">
+    <div id="category-show-title-words"> 
+      <%= @category.title %>
+    </div>
 </div>
-<div
-  class="container d-flex justify-content-between"
-  style="padding-left: 10px; padding-right: 10px; margin-top: 15px;"
->
-  <div><button
-      type="button"
-      class="btn btn-outline-secondary"
-      id="amsterdam-btn"
-      style="border-radius: 20px; width: 110px;"
-    >Amsterdam</button></div>
-  <div><button
-      type="button"
-      class="btn btn-outline-secondary"
-      id="rotterdam-btn"
-      style="border-radius: 20px; width: 110px;"
-    >Rotterdam</button></div>
-  <div><button
-      type="button"
-      class="btn btn-outline-secondary"
-      id="the-hague-btn"
-      style="border-radius: 20px; width: 110px;"
-    >The Hague</button></div>
-</div>
-<hr>
-<div id="category-page-main">
-  <div class="container" style="margin-top: 20px">
-    <% @suggestions.each do |suggestion| %>
-      <%= link_to suggestion_path(suggestion), class: 'text-decoration-none text-dark' do %>
-        <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
-          <% if suggestion.images.present? %>
-            <%= image_tag(suggestion.images[0], class: "card-img-top", style: "max-height: 250px") %>
-          
-          <% else %>
-            <%= image_tag("food-01.jpg", class: "card-img-top") %>
-          <% end %>
-          <div class="suggestion-cards-info">
-            <h5
-                class="card-title"
-                style="padding-top: 15px; font-weight: 700; letter-spacing: 1px; padding-bottom: 5px; "
-              ><%= suggestion.title %></h5>
-            <div>
-              <p class="card-text b-5"><i class="fa-solid fa-location-dot"></i>
-                <%= suggestion.city %>
-                &nbsp;
-                <%= suggestion.sub_category %>
-                &nbsp;
-                <i class="fa-solid fa-star" style="color: #992944; font-size: 14px">
-                  <%= suggestion.rating %></i>
-              </p>
+  <div
+    class="container d-flex justify-content-between"
+    style="padding-left: 10px; padding-right: 10px; margin-top: 15px;"
+  >
+    <div><button
+        type="button"
+        class="btn btn-outline-secondary"
+        id="amsterdam-btn"
+        style="border-radius: 20px; width: 110px;"
+      >Amsterdam</button></div>
+    <div><button
+        type="button"
+        class="btn btn-outline-secondary"
+        id="rotterdam-btn"
+        style="border-radius: 20px; width: 110px;"
+      >Rotterdam</button></div>
+    <div><button
+        type="button"
+        class="btn btn-outline-secondary"
+        id="the-hague-btn"
+        style="border-radius: 20px; width: 110px;"
+      >The Hague</button></div>
+  </div>
+  <hr>
+  <div id="category-page-main">
+    <div class="container" style="margin-top: 20px">
+      <% @suggestions.each do |suggestion| %>
+        <%= link_to suggestion_path(suggestion), class: 'text-decoration-none text-dark' do %>
+          <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
+            <% if suggestion.images.present? %>
+              <%= image_tag(suggestion.images[0], class: "card-img-top", style: "max-height: 250px") %>
+            
+            <% else %>
+              <%= image_tag("food-01.jpg", class: "card-img-top") %>
+            <% end %>
+            <div class="suggestion-cards-info">
+              <h5
+                  class="card-title"
+                  style="padding-top: 15px; font-weight: 700; letter-spacing: 1px; padding-bottom: 5px; "
+                ><%= suggestion.title %></h5>
+              <div>
+                <p class="card-text b-5"><i class="fa-solid fa-location-dot"></i>
+                  <%= suggestion.city %>
+                  &nbsp;
+                  <%= suggestion.sub_category %>
+                  &nbsp;
+                  <i class="fa-solid fa-star" style="color: #992944; font-size: 14px">
+                    <%= suggestion.rating %></i>
+                </p>
+              </div>
             </div>
           </div>
-        </div>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
   </div>
-</div>
-<script>
-  document.addEventListener("DOMContentLoaded", function(event) {
-    document.getElementById("amsterdam-btn").click();
- });
+  <script>
+    document.addEventListener("DOMContentLoaded", function(event) {
+      document.getElementById("amsterdam-btn").click();
+  });
 
-  const amsterdamButton = document.getElementById('amsterdam-btn')
-  amsterdamButton.addEventListener('Click', (event) => {
-    console.log('hello')
-  })
+    const amsterdamButton = document.getElementById('amsterdam-btn')
+    amsterdamButton.addEventListener('Click', (event) => {
+      console.log('hello')
+    })
 
-  const rotterdamButton = document.querySelector('#rotterdam-btn')
-  const theHagueButton = document.querySelector('#the-hague-btn')
-</script>
+    const rotterdamButton = document.querySelector('#rotterdam-btn')
+    const theHagueButton = document.querySelector('#the-hague-btn')
+  </script>
