--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -1,8 +1,6 @@
-<div class="card bg-dark text-white" style="height: 150px;">
-  <%= image_tag("dashboard.jpeg", class: "card-img", alt: "Card image") %>
-  <div class="card-img-overlay"></div>
-</div>
-<div class="container" style="margin-top: 20px">
+
+<div class="container" style="margin-top: 70px">
+
   <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
     <% if @suggestion.images.present? %>
       <%= image_tag(
@@ -13,6 +11,9 @@
     <% else %>
       <%= image_tag("food-01.jpg", class: "card-img-top") %>
     <% end %>
+
+
+
     <div style='height: 0px'>
       <% if current_user %>
         <% if current_user.favorites.where(suggestion: @suggestion).empty? %>
@@ -30,6 +31,10 @@
       <% end %>
     </div>
   </div>
+  
+  <div>
+
+  </div>
 
   <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
     <div class="suggestion-cards-info">
@@ -39,17 +44,13 @@
             <%= f.input :occurs_on,
                   as: :string,
                   input_html: { data: { controller: "datepicker"}} %>
-            <%= f.submit "Create Spark", class:"btn btn-ghost" %>
+            <%= f.submit "Create Spark", id:"create-spark" %>
           <% end %>
         <% end %>
       </div>
     </div>
   </div>
 <div>
-
-  <% unless !current_user.favorites.nil? %>
-    <p>YOU ARE LONELY. DEAL WITH IT</p>
-  <% end %>
 
 </div>
 <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
