--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -9,9 +9,15 @@
 
 .navbar-lewagon .navbar-brand img {
   width: 40px;
-
 }
 
+.fa-arrow-left {
+  font-size: 1.5rem;
+  color: #A03851;
+
+
+
+}
 .footer {
   position: absolute;
   bottom: 0;
