--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,26 +1,13 @@
 <div id="category-show-page-banner"class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-  <h2>My Sparks</h2>
+    <h2>Favorites</h2>
 </div>
-  <div id="favorite-page-tabs">
-    <ul class="list-inline tabs-underlined">
-      <li>
-        <a href="#" class="tab-underlined active">Favorites</a>
-      </li>
-      <li>
-        <a href="#" class="tab-underlined">Upcoming Sparks</a>
-      </li>
-      <li>
-        <a href="#" class="tab-underlined">Past Sparks</a>
-      </li>
-    </ul>
-  </div>
 <div id="category-page-main">
   <div class="container" style="margin-top: 20px">
     <% current_user.suggestions.each do |suggestion| %>
       <%= link_to suggestion_path(suggestion), class: 'text-decoration-none text-dark' do %>
         <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
           <% if suggestion.images.present? %>
-            <%= image_tag(suggestion.images[0], class: "card-img-top", style: "max-height: 250px") %>
+            <%= image_tag(suggestion.images[0], style: "max-height: 250px; object-fit: cover") %>
           <% else %>
             <%= image_tag("food-01.jpg", class: "card-img-top") %>
           <% end %>
@@ -45,6 +32,3 @@
     <% end %>
   </div>
 </div>
-
-
-
